applications/base/harbor-cleanup/harbor-cleanup-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-cleanup
  namespace: harbor-cleanup
  labels:
    pihole-dns-enabled: "true"
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: https
  hostnames:
    - harbor-cleanup.local.abbottland.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor-cleanup
          port: 80
